--- a/html/pagina.html
+++ b/html/pagina.html
@@ -12,5 +12,6 @@
 <h1>Primer intento de website</h1>
 <p>Este es nuestro primer programa complto y profesional</p>
 <p>Gran programa</p>
+<img src="/platzi/mokepon/assets2/Bill_Gates.jpeg" alt="">
 </body>
 </html>
