--- a/html/page.html
+++ b/html/page.html
@@ -4,7 +4,7 @@
         <title>Biografia de Bill Gates</title>
         <h1>Bill Gates</h1>
         <p>Filantropo conocido por ser participe de la compañia Microsoft</p>
-        <img src="/platzi/mokepon/assets2/Bill_Gates.jpeg" alt="">
+        <img src="/html/assets2/Bill_Gates.jpeg" alt="">
         <ul>
             <li>
                 Fundo Microsoft basandose en el negocio de Steve Jobs (Apple)
@@ -14,6 +14,9 @@
             </li>
             <li>
                 Se fue de la compañoa Microsoft en 2008 dejando un legado en esta
+            </li>
+            <li>
+                La fortuna de este precoz programador, que no llegó a terminar sus estudios y que a los 31 años era ya multimillonario, procede del éxito arrollador de su sistema operativo, el MS-DOS (1981), que evolucionaría hasta convertirse en el popular Windows 3.1 (1992) y daría lugar a las sucesivas versiones de este sistema operativo, omnipresente hasta nuestros días en la inmensa mayoría de los ordenadores portátiles y de sobremesa.
             </li>
         </ul>
     </head>
