--- a/html/page.html
+++ b/html/page.html
@@ -13,7 +13,7 @@
                 Es filantropo y apoya a varias causas positivas al mundo
             </li>
             <li>
-                Se fue de la compañoa Microsoft en 2008 dejando un legado en esta
+                Se fue de la compañia Microsoft en 2008 dejando un legado en esta
             </li>
             <li>
                 La fortuna de este precoz programador, que no llegó a terminar sus estudios y que a los 31 años era ya multimillonario, procede del éxito arrollador de su sistema operativo, el MS-DOS (1981), que evolucionaría hasta convertirse en el popular Windows 3.1 (1992) y daría lugar a las sucesivas versiones de este sistema operativo, omnipresente hasta nuestros días en la inmensa mayoría de los ordenadores portátiles y de sobremesa.
