--- a/html/historia.html
+++ b/html/historia.html
@@ -29,7 +29,7 @@
         </main>
         <footer>
             <p>Para más informacion visita la <a href="http://www.html.com">pagina web de html.com</a></p>
-            <p>Hecho por AnonDEV</p>
+            <p>Hecho por AnonDEV💻🇨🇴</p>
         </footer>
     </body>    
 </html>
