--- a/html/historia.html
+++ b/html/historia.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="/html/html.css">s
+        <link rel="stylesheet" href="/html/html.css">
     </head>
     <body>
         <header>
