--- a/html/page.html
+++ b/html/page.html
@@ -42,6 +42,10 @@
             <li>Tambien apoyaron una campaña para reinvertar el inodoro para la poblacion pobre</li>
         </ul>
     </section>
+    <section>
+        <p>Video para informarse de este genio :</p>
+        <video src="/html/assets2/Curiosidades sobre Bill Gates que quizás no sepa.mp4" width= 540px controls></video>
+    </section>
     </main>
     </head>
     <footer>
