--- a/html/page.html
+++ b/html/page.html
@@ -44,7 +44,7 @@
     </section>
     <section>
         <p>Video para informarse de este genio :</p>
-        <video src="/html/assets2/Curiosidades sobre Bill Gates que quizás no sepa.mp4" width= 540px controls></video>
+        <video src="/html/assets2/Curiosidades sobre Bill Gates que quizás no sepa.mp4" width= 540px controls preload="auto"></video>
     </section>
     </main>
     </head>
