--- a/proyecto1/proyecto.html
+++ b/proyecto1/proyecto.html
@@ -16,7 +16,7 @@
                 <input type="submit" value="Verificar">
             </label>
         </form>
-    </section>
+    </section><br>
     <section>
         <form action="">
             <label for="contraseña">
@@ -26,6 +26,8 @@
                 </label>
             </label>
         </form>
-    </section>
+    </section><br>
+
 </body>
+<footer>Este es un sitio de chat anonimo, no los encargamos de los problemas que generes aqui.</footer>
 </html>
