--- a/proyecto1/proyecto.html
+++ b/proyecto1/proyecto.html
@@ -29,5 +29,5 @@
     </section><br>
 
 </body>
-<footer>Este es un sitio de chat anonimo, no los encargamos de los problemas que generes aqui.</footer>
+<footer>Este es un sitio de chat anonimo, no encargamos de los problemas que generes aqui.</footer>
 </html>
