--- a/proyecto1/proyecto.html
+++ b/proyecto1/proyecto.html
@@ -13,7 +13,6 @@
             <label for="nombre">
                 <span>Nombre de Usuario:</span>
                 <input type="text" name="" id="">
-                <input type="submit" value="Verificar">
             </label>
         </form>
     </section><br>
@@ -22,12 +21,18 @@
             <label for="contraseña">
                 <span>Contraseña:</span>
                 <input type="password" name="" id="">
-                <input type="submit" value="Verificar">
                 </label>
             </label>
         </form>
     </section><br>
-
+    <section>
+        <form action="">
+            <label for="confirmar">
+                <span>Confirmar:</span>
+                <input type="submit">
+            </label>
+        </form>
+    </section>
 </body>
 <footer>Este es un sitio de chat anonimo, no los encargamos de los problemas que generes aqui.</footer>
 </html>
