--- a/proyecto1/proyecto.html
+++ b/proyecto1/proyecto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AnonChat</title>
+    <title>AnonChat: Tu sitio de chat anonimo y libre de opinion</title>
 </head>
 <body>
     <h1>AnonChat</h1>
