--- a/proyecto1/proyecto.html
+++ b/proyecto1/proyecto.html
@@ -7,7 +7,7 @@
     <title>AnonChat: Tu sitio de chat anonimo y libre de opinion</title>
 </head>
 <body>
-    <h1>AnonChat</h1>
+    <h1>AnonChat: Tu sitio de chat anonimo y libre de opinion</h1>
     <section>
         <form action="">
             <label for="nombre">
