--- a/proyecto1/proyecto.html
+++ b/proyecto1/proyecto.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AnonChat BETA</title>
+    <audio src="/proyecto1/matrix-intro.mp3" autoplay loop></audio>
 </head>
 <body>
     <h1>AnonChat: Tu sitio de chat anonimo y libre de opinion</h1>
