--- a/proyecto1/proyecto.html
+++ b/proyecto1/proyecto.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AnonChat BETA</title>
     <audio src="/proyecto1/matrix-intro.mp3" autoplay loop></audio>
+    <link rel="stylesheet" href="/proyecto1/proyecto.css">
 </head>
 <body>
     <h1>AnonChat: Tu sitio de chat anonimo y libre de opinion</h1>
