--- a/proyecto1/proyecto.html
+++ b/proyecto1/proyecto.html
@@ -5,19 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AnonChat BETA</title>
-    <audio src="/proyecto1/matrix-intro.mp3" autoplay loop></audio>
+    <link rel="stylesheet" href="/proyecto1/proyecto1.css">
 </head>
 <body>
-    <link rel="stylesheet" href="/proyecto1/proyecto.css">
-    <h1>AnonChat: Tu sitio de chat anonimo y libre de opinion</h1>
+    <div class="form">
     <section>
+        <br>
+        <h1>AnonChat: Tu sitio de chat anonimo y libre de opinion</h1>
+        <br>
+        <br>
+    </section>
         <form action="">
             <label for="nombre">
                 <span>Nombre de Usuario:</span>
                 <input type="text" name="" id="">
             </label>
         </form>
-    </section><br>
+    </section><br><br>
     <section>
         <form action="">
             <label for="contraseña">
@@ -27,14 +31,15 @@
             </label>
         </form>
     </section><br>
-    <section>
+    <section><br><br>
         <form action="">
             <label for="confirmar">
                 <span>Confirmar:</span>
                 <input type="submit">
             </label>
         </form>
-    </section>
+    </section><br><br>
+</div>
 </body>
 <footer>Este es un sitio de chat anonimo, no los encargamos de los problemas que generes aqui.</footer>
 </html>
