--- a/proyecto1/proyecto.html
+++ b/proyecto1/proyecto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AnonChat BETA</title>
+    <title>AnonChat BETA 0.6</title>
     <link rel="stylesheet" href="/proyecto1/proyecto1.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
         <form action="">
             <label for="nombre">
                 <span>Nombre de Usuario:</span>
-                <input type="text" name="" id="">
+                <input type="text" name="nombre" id="nombre" autocomplete="nombre">
             </label>
         </form>
     </section><br><br>
@@ -26,7 +26,7 @@
         <form action="">
             <label for="contraseña">
                 <span>Contraseña:</span>
-                <input type="password" name="" id="">
+                <input type="password" name="password" id="password" autocomplete="password">
                 </label>
             </label>
         </form>
@@ -35,7 +35,7 @@
         <form action="">
             <label for="confirmar">
                 <span>Confirmar:</span>
-                <input type="submit">
+                <input type="submit" name="confirmar" id="confirmar">
             </label>
         </form>
     </section><br><br>
