--- a/proyecto1/proyecto.html
+++ b/proyecto1/proyecto.html
@@ -9,16 +9,20 @@
 </head>
 <body>
     <div class="form">
-    <section>
         <br>
-        <h1>AnonChat: Tu sitio de chat anonimo y libre de opinion</h1>
+        <br>
+        <br>
+        <br>
+
+    <section>
+        <h1>AnonChat: Admin/Mod login</h1>
         <br>
         <br>
     </section>
         <form action="">
             <label for="nombre">
                 <span>Nombre de Usuario:</span>
-                <input type="text" name="nombre" id="nombre" autocomplete="nombre">
+                <input type="text" name="name" id="name" autocomplete="name" required placeholder="Inserte su usuario">
             </label>
         </form>
     </section><br><br>
@@ -26,7 +30,7 @@
         <form action="">
             <label for="contraseña">
                 <span>Contraseña:</span>
-                <input type="password" name="password" id="password" autocomplete="password">
+                <input type="password" name="password" id="password" autocomplete="password" required placeholder="Inserte su contraseña">
                 </label>
             </label>
         </form>
@@ -41,5 +45,8 @@
     </section><br><br>
 </div>
 </body>
-<footer>Este es un sitio de chat anonimo, no los encargamos de los problemas que generes aqui.</footer>
+<footer>
+   <p>Este es un sitio de chat anonimo, no los encargamos de los problemas que generes aqui.</p>
+   <p>Hecho por JIMF Team 🇨🇴💻</p>
+</footer>
 </html>
