--- a/proyecto1/proyecto.html
+++ b/proyecto1/proyecto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AnonChat BETA 0.6</title>
+    <title>AnonChat Login</title>
     <link rel="stylesheet" href="/proyecto1/proyecto1.css">
 </head>
 <body>
