--- a/coach2/actividad3/index.html
+++ b/coach2/actividad3/index.html
@@ -8,25 +8,13 @@
     <link rel="stylesheet" href="/coach2/actividad3/style.css">
 </head>
 <body>
-    <div class="login-box">
-        <h2>Ingresa al chat global</h2>
-        <form>
-          <div class="user-box">
-            <input type="text" name="" required="">
-            <label>Usuario</label>
-          </div>
-          <div class="user-box">
-            <input type="password" name="" required="">
-            <label>Contraseña</label>
-          </div>
-          <a href="#">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            Entrar
-          </a>
-        </form>
-      </div>
+<ul class="nav-ul">
+    <div class="nav">
+        <a href="/">Directory</a>
+        <a href="/coach2">Coach 1</a>
+        <a href="/coach1">Coach 2</a>
+    </div>
+</ul>
+<button class="inline-block-button">Example</button>
 </body>
 </html>
