--- a/coach2/actividad2/index.html
+++ b/coach2/actividad2/index.html
@@ -1,61 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cafe Menu</title>
-    <link rel="stylesheet" href="/coach2/actividad2/style.css">
-</head>
-<body>
+    <link href="/coach2/actividad2/style.css" rel="stylesheet"/>
+  </head>
+  <body>
     <div class="menu">
-        <main>
-            <h1>ANON COFFEE</h1>
-            <p class="established">Est 2023</p>
-            <hr>
-            <section>
-                <h2>Coffee</h2>
-                <img src="/coach2/actividad2/src/icons8-coffee-90.png" alt="coffee-icon">
-                <article class="item">
-                    <p class="flavor">French Vanilla</p>
-                    <p class="price">3.99$</p>
-                </article>
-                <article class="item">
-                    <p class="flavor">Cappuccino</p>
-                    <p class="price">3.99$</p>
-                </article>
-                <article class="item">
-                    <p class="flavor">Mocha</p>
-                    <p class="price">3.99$</p>
-                </article>
-                <article class="item">
-                    <p class="flavor">American Coffee</p>
-                    <p class="price">3.99$</p>
-                </article>
-            </section>
-            <section>
-                <h2>Dessert</h2>
-                <img src="/coach2/actividad2/src/icons8-dessert-100.png" alt="dessert-icon">
-                <article class="item">
-                    <p class="flavor">Apple Pie</p>
-                    <p class="price">3.99$</p>
-                </article>
-                <article class="item">
-                    <p class="flavor">Chocolate Cake</p>
-                    <p class="price">3.99$</p>
-                </article>
-                <article class="item">
-                    <p class="flavor">Ice Cream</p>
-                    <p class="price">3.99$</p>
-                </article>
-                <article class="item">
-                    <p class="flavor">Carrot Cake</p>
-                    <p class="price">3.99$</p>
-            </section>
-        </main>
+      <header>
+        <h1>ANON CAFE</h1>
+        <p class="established">Desde 2023</p>
+      </header>
+      <hr>
+      <main>
+        <section>
+          <h2>Cafes</h2>
+          <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" alt="coffee icon"/>
+          <article class="item">
+            <p class="flavor">Vainilla francesa</p><p class="price">3.00</p>
+          </article>
+          <article class="item">
+            <p class="flavor">Macchiato con caramelo</p><p class="price">3.75</p>
+          </article>
+          <article class="item">
+            <p class="flavor">Calabaza con especias</p><p class="price">3.50</p>
+          </article>
+          <article class="item">
+            <p class="flavor">Avellana</p><p class="price">4.00</p>
+          </article>
+          <article class="item">
+            <p class="flavor">Mocha</p><p class="price">4.50</p>
+          </article>
+        </section>
+        <section>
+          <h2>Postres</h2>
+          <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/pie.jpg" alt="pie icon"/>
+          <article class="item">
+            <p class="dessert">Donas</p><p class="price">1.50</p>
+          </article>
+          <article class="item">
+            <p class="dessert">Pie de manzana</p><p class="price">2.75</p>
+          </article>
+          <article class="item">
+            <p class="dessert">Helado</p><p class="price">3.00</p>
+          </article>
+          <article class="item">
+            <p class="dessert">Rollos de canela</p><p class="price">2.50</p>
+          </article>
+        </section>
+      </main>
+      <hr class="bottom-line">
+      <footer>
+        <p>Made by AnonDEV (also traductions)</p>
+      </footer>
     </div>
-    <footer>
-        <p>Maked by AnonDEV</p>
-    </footer>
-</body>
+  </body>
 </html>
