--- a/dummy/index.html
+++ b/dummy/index.html
@@ -8,30 +8,18 @@
   <link rel="stylesheet" href="/dummy/style.css">
 </head>
 <body>
-  <header>
-    <h1>Inicio</h1>
-  </header>
-  <main>
-    <section>
-      <div class="box1">
-        <article>
-          <h2>Titulo1</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, consequatur odit dolor doloremque quidem ullam? Consequatur exercitationem reiciendis aspernatur pariatur. Iste rerum dolores laborum eligendi ipsam obcaecati temporibus numquam culpa!</p>
-        </article>
-      </div>
-      <div class="box2">
-        <article>
-          <h2>Titulo2</h2>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum ut eveniet amet recusandae quasi? Vero quae, qui at commodi voluptatum tenetur deserunt nisi ullam consectetur harum ipsam totam dicta alias?</p>
-        </article>
-      </div>
-      <div class="box3">
-        <article>
-          <h2>Titulo3</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi ipsum accusamus voluptatem iusto cumque? Culpa at sunt deserunt nulla doloribus repellendus minima quibusdam laudantium vel quod, maxime architecto ipsa doloremque?</p>
-        </article>
-      </div>
-    </section>
-  </main>
+  <p class="box">Parrafo de ejemplo</p>
+  <ul class="box2">
+    <li>Elemento 1</li>
+    <li>Elemento 2</li>
+    <li>Elemento 3</li>
+  </ul>
+  <div class="cardsContainer">
+    <p class="box cards">
+      Soy otro parrafo. Algunas de mis <span class="color">Palabras</span> esta atrapadas en un <span>Elemento</span>
+    </p>
+    <div class="cardsContainer">Test</div>
+  </div>
+
 </body>
 </html>
