--- a/coach2/actividad2/index.html
+++ b/coach2/actividad2/index.html
@@ -16,37 +16,43 @@
       <main>
         <section>
           <h2>Cafes</h2>
+          <br>
+          <br>
           <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" alt="coffee icon"/>
+          <br>
           <article class="item">
-            <p class="flavor">Vainilla francesa</p><p class="price">3.00</p>
+            <p class="flavor">Vainilla francesa</p><p class="price">13.000$</p>
           </article>
           <article class="item">
-            <p class="flavor">Macchiato con caramelo</p><p class="price">3.75</p>
+            <p class="flavor">Macchiato con caramelo</p><p class="price">15.000$</p>
           </article>
           <article class="item">
-            <p class="flavor">Calabaza con especias</p><p class="price">3.50</p>
+            <p class="flavor">Calabaza con especias</p><p class="price">19.000$</p>
           </article>
           <article class="item">
-            <p class="flavor">Avellana</p><p class="price">4.00</p>
+            <p class="flavor">Avellana</p><p class="price">11.000$</p>
           </article>
           <article class="item">
-            <p class="flavor">Mocha</p><p class="price">4.50</p>
+            <p class="flavor">Mocha</p><p class="price">9.000$</p>
           </article>
         </section>
         <section>
           <h2>Postres</h2>
+          <br>
+          <br>
           <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/pie.jpg" alt="pie icon"/>
+          <br>
           <article class="item">
-            <p class="dessert">Donas</p><p class="price">1.50</p>
+            <p class="dessert">Donas</p><p class="price">20.000$</p>
           </article>
           <article class="item">
-            <p class="dessert">Pie de manzana</p><p class="price">2.75</p>
+            <p class="dessert">Pie de manzana</p><p class="price">22.000$</p>
           </article>
           <article class="item">
-            <p class="dessert">Helado</p><p class="price">3.00</p>
+            <p class="dessert">Helado</p><p class="price">12.000$</p>
           </article>
           <article class="item">
-            <p class="dessert">Rollos de canela</p><p class="price">2.50</p>
+            <p class="dessert">Rollos de canela</p><p class="price">11.000$</p>
           </article>
         </section>
       </main>
