--- a/dummy/index.html
+++ b/dummy/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>ExampleTitle</title>
   <link rel="stylesheet" href="/dummy/style.css">
 </head>
 <body>
@@ -16,11 +16,11 @@
   </header>
   <div class="main">
     <main>
-      <h1>ExampleText</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod eum non ullam eligendi delectus, cum iusto quia illo amet, nam magni accusantium cumque deleniti aspernatur quaerat, fugit dolores architecto explicabo?</p>
+      <h1>ExampleTitle</h1>
+      <p>ExampleAuthor</p>
     </main>
     <section></section>
-    <section class="sectiion1">
+    <section class="section1">
       <li>
         <p>
           Title1
@@ -28,9 +28,11 @@
         <p>
           ExampleAlbum
         </p>
-        <button class="play-button">
-          <img src="/dummy/src/bx-play.svg" alt="play-button">
-        </button>
+        <div class="play-button">
+          <button>
+            <img src="/dummy/src/bx-play.svg" alt="play-button">
+          </button>
+        </div>
       </li>
       <li>
         <p>
@@ -39,9 +41,11 @@
         <p>
           ExampleAlbum
         </p>
-        <button class="play-button">
-          <img src="/dummy/src/bx-play.svg" alt="play-button">
-        </button>
+        <div class="play-button">
+          <button>
+            <img src="/dummy/src/bx-play.svg" alt="play-button">
+          </button>
+        </div>
       </li>
       <li>
         <p>
@@ -50,9 +54,11 @@
         <p>
           ExampleAlbum
         </p>
-        <button class="play-button">
-          <img src="/dummy/src/bx-play.svg" alt="play-button">
-        </button>
+        <div class="play-button">
+          <button>
+            <img src="/dummy/src/bx-play.svg" alt="play-button">
+          </button>
+        </div>
       </li>
       <li>
         <p>
@@ -61,9 +67,11 @@
         <p>
           ExampleAlbum
         </p>
-        <button>
-          <img src="/dummy/src/bx-play.svg" alt="play-button">
-        </button>
+        <div class="play-button">
+          <button>
+            <img src="/dummy/src/bx-play.svg" alt="play-button">
+          </button>
+        </div>
       </li>
     </section>
   </div>
@@ -72,6 +80,7 @@
       <section class="section2">
         <button>
           <img src="/dummy/src/bxl-facebook-circle.svg" alt="facebook-button">
+        </button>
         <button>
           <img src="/dummy/src/bxl-instagram.svg" alt="instagram-button">
         </button>
@@ -85,7 +94,7 @@
     </div>
     <div class="footer-text">
       <h2>
-        <a href="/"></a>
+        <a href="/">ExampleLink</a>
       </h2>
     </div>
   </footer>
