--- a/example-login-website/index.html
+++ b/example-login-website/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/style/style.css">
-</head>
-<body>
-    <div class="container">
-        <h1>Login</h1>
-        <form>
+<html>
+   <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Responsive Login Page</title>
+      <link rel="stylesheet" href="/style/style.css">
+   </head>
+   <body>
+      <div class="container">
+         <h1>Login</h1>
+         <form>
             <label for="username">Username</label>
             <input type="text" id="username" name="username" placeholder="Enter your username">
             <label for="password">Password</label>
             <input type="password" id="password" name="password" placeholder="Enter your password">
-            <button type="submit" id="login-btn">Login</button>
-        </form>
-    </div>
-</body>
+         </form>
+         <form action="/dashboard.html">
+            <input type="submit" value="Login">
+         </form>
+      </div>
+      <script src="/js/script.js" defer></script>
+   </body>
 </html>
